chore: update and clean up export statements across packages
Updated and cleaned up export statements in multiple packages to ensure consistency and proper modularization. This includes removing unused exports and adding missing ones to the package.json files for `eslint-config`, `types`, `unocss-preset`, and `vue`. Also, files were moved between packages which affected their import paths, specifically utils.ts was moved from `client` to `types`.

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -16,6 +16,16 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
+    "./configs": {
+      "require": "./dist/configs.cjs",
+      "types": "./dist/configs.d.ts",
+      "import": "./dist/configs.js"
+    },
+    "./utils": {
+      "require": "./dist/utils.cjs",
+      "types": "./dist/utils.d.ts",
+      "import": "./dist/utils.js"
+    },
     ".": {
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts",
