--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -636,6 +636,11 @@
       "types": "./dist/WriteableDeep.d.ts",
       "import": "./dist/WriteableDeep.js"
     },
+    "./utils": {
+      "require": "./dist/utils.cjs",
+      "types": "./dist/utils.d.ts",
+      "import": "./dist/utils.js"
+    },
     ".": {
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts",
