feat(client): add WebSocket support for real-time communication
Introduced WebSocket functionality within the `client` package to enable real-time communication capabilities. This includes new utilities for WebSocket connections such as `connect.ts`, `parseConnectOptions.ts`, and updates to the `Client` class to incorporate WebSocket channels. The `WebSocketChannel` class provides methods to open, send, receive, and close connections, along with automatic reconnection logic. This implementation allows users to connect to WebSocket channels using flexible options defined in `ConnectOptions`, enhancing the client's interaction with real-time services.

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -51,6 +51,11 @@
       "types": "./dist/utils.d.ts",
       "import": "./dist/utils.js"
     },
+    "./websocket": {
+      "require": "./dist/websocket.cjs",
+      "types": "./dist/websocket.d.ts",
+      "import": "./dist/websocket.js"
+    },
     ".": {
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts",
