chore: migrate from OpenAI to Anthropic for commit message generation
This commit updates the commit message generation process to use Anthropic's Claude model instead of OpenAI's GPT-4. The change includes switching from the OpenAI SDK to the Anthropic SDK, updating the API key environment variable, and adjusting the streaming implementation to work with the new API.

The commit also includes minor improvements to the commit message prompt and removes the OpenAI dependency in favor of the Anthropic and AI SDKs.

--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -96,12 +96,13 @@
     "LICENSE.md"
   ],
   "dependencies": {
+    "@ai-sdk/anthropic": "1.0.6",
     "@unshared/collection": "workspace:*",
     "@unshared/fs": "workspace:*",
     "@unshared/process": "workspace:*",
     "@unshared/string": "workspace:*",
     "@unshared/types": "workspace:*",
-    "openai": "4.77.0",
+    "ai": "4.0.22",
     "rollup": "4.28.1",
     "rollup-plugin-dts": "6.1.1",
     "rollup-plugin-esbuild": "6.1.1",
