chore: upgrade dependencies across multiple packages
This commit updates dependencies in several packages within the monorepo. Key changes include:

- Upgrading UnoCSS related packages from 0.65.1 to 0.65.3 in the Nuxt example and unocss-preset package.
- Updating Nuxt from 3.14.1592 to 3.15.0 in the Nuxt example and Vue package.
- Upgrading VueUse packages from 12.0.0 to 12.2.0 in the Nuxt example and Vue package.
- Updating various ESLint plugins and parsers in the eslint-config package.
- Upgrading happy-dom from 15.11.7 to 16.0.1 and memfs from 4.15.0 to 4.15.1 in the root package.json and fs package.
- Updating Rollup from 4.28.1 to 4.29.1 in the scripts package.

These updates aim to keep the project current with the latest package versions, potentially bringing bug fixes, performance improvements, and new features to the development environment.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "eslint",
         "typescript",
         "meow",
-        "@typescript-eslint/parser"
+        "@typescript-eslint/parser",
+        "zod"
       ]
     },
     "overrides": {
@@ -53,9 +54,9 @@
     "@vitest/utils": "2.1.8",
     "commitlint": "19.6.1",
     "eslint": "9.17.0",
-    "happy-dom": "15.11.7",
+    "happy-dom": "16.0.1",
     "husky": "9.1.7",
-    "memfs": "4.15.0",
+    "memfs": "4.15.1",
     "tsx": "4.19.2",
     "typescript": "5.7.2",
     "vitest": "2.1.8"
