feat(collection): add `createCache` utility for LRU and TTL caching
This commit introduces a new `createCache` utility that provides a Map-like cache implementation with support for LRU (Least Recently Used) and TTL (Time-To-Live) eviction strategies. The cache extends the native Map class and includes features like size-based eviction, custom size calculation, and eviction callbacks. The implementation is fully typed and thoroughly tested with comprehensive documentation.

--- a/packages/collection/package.json
+++ b/packages/collection/package.json
@@ -41,6 +41,11 @@
       "types": "./dist/compact.d.ts",
       "import": "./dist/compact.js"
     },
+    "./createCache": {
+      "require": "./dist/createCache.cjs",
+      "types": "./dist/createCache.d.ts",
+      "import": "./dist/createCache.js"
+    },
     "./deleteProperty": {
       "require": "./dist/deleteProperty.cjs",
       "types": "./dist/deleteProperty.d.ts",
