feat(string): add `isDigit` function for character validation
Similar to the recent string input support added to case checking functions, this commit introduces a new `isDigit` utility that checks if a character or character code represents a digit (0-9). The function accepts both string inputs and character codes, making it flexible and consistent with other character checking utilities in the package. The implementation includes comprehensive test coverage for various input scenarios including digits, letters, symbols, and edge cases.

--- a/packages/string/package.json
+++ b/packages/string/package.json
@@ -66,6 +66,11 @@
       "types": "./dist/escapeRegexp.d.ts",
       "import": "./dist/escapeRegexp.js"
     },
+    "./isDigit": {
+      "require": "./dist/isDigit.cjs",
+      "types": "./dist/isDigit.d.ts",
+      "import": "./dist/isDigit.js"
+    },
     "./isLower": {
       "require": "./dist/isLower.cjs",
       "types": "./dist/isLower.d.ts",
