feat(math): add binomial coefficient calculation function
Added a new `choose` function to calculate binomial coefficients (n choose k), which computes the number of ways to select k items from a set of n items. The implementation uses BigInt to handle large numbers accurately and includes comprehensive test coverage for edge cases and common scenarios. This function is particularly useful for probability calculations and combinatorial mathematics.

--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -21,6 +21,11 @@
       "types": "./dist/ceil.d.ts",
       "import": "./dist/ceil.js"
     },
+    "./choose": {
+      "require": "./dist/choose.cjs",
+      "types": "./dist/choose.d.ts",
+      "import": "./dist/choose.js"
+    },
     "./clamp": {
       "require": "./dist/clamp.cjs",
       "types": "./dist/clamp.d.ts",
