feat(collection): add linked list implementation with array interface
This commit adds a new `List` class that implements the native `Array` interface using a doubly linked list data structure. This implementation is optimized for adding and removing items at the beginning and end of the list, and provides faster iteration as it doesn't need to check for holes. The implementation includes comprehensive test coverage and maintains full compatibility with the native Array API.

The main features include:
- Full implementation of the Array interface including all standard methods
- Optimized operations for adding/removing elements at the start/end
- Doubly linked list structure for efficient traversal
- Array-like index access through Proxy
- Comprehensive test coverage matching Array behavior

--- a/packages/collection/package.json
+++ b/packages/collection/package.json
@@ -46,6 +46,11 @@
       "types": "./dist/createCache.d.ts",
       "import": "./dist/createCache.js"
     },
+    "./createList": {
+      "require": "./dist/createList.cjs",
+      "types": "./dist/createList.d.ts",
+      "import": "./dist/createList.js"
+    },
     "./deleteProperty": {
       "require": "./dist/deleteProperty.cjs",
       "types": "./dist/deleteProperty.d.ts",
