--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,87 @@
   "unocss.root": [
     "./examples/nuxt"
   ],
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "rust-analyzer.linkedProjects": [
+    "packages/logger/bindings/Cargo.toml"
+  ],
+  "files.associations": {
+    "*.sqlbook": "sql",
+    "*.ndjson": "jsonl",
+    "*.dbclient-js": "javascript",
+    "cstdint": "cpp",
+    "functional": "cpp",
+    "typeinfo": "cpp",
+    "system_error": "cpp",
+    "string": "cpp",
+    "array": "cpp",
+    "atomic": "cpp",
+    "bit": "cpp",
+    "*.tcc": "cpp",
+    "bitset": "cpp",
+    "cctype": "cpp",
+    "clocale": "cpp",
+    "cmath": "cpp",
+    "compare": "cpp",
+    "concepts": "cpp",
+    "condition_variable": "cpp",
+    "cstdarg": "cpp",
+    "cstddef": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "cstring": "cpp",
+    "ctime": "cpp",
+    "cwchar": "cpp",
+    "cwctype": "cpp",
+    "deque": "cpp",
+    "map": "cpp",
+    "set": "cpp",
+    "unordered_map": "cpp",
+    "unordered_set": "cpp",
+    "vector": "cpp",
+    "exception": "cpp",
+    "algorithm": "cpp",
+    "iterator": "cpp",
+    "memory": "cpp",
+    "memory_resource": "cpp",
+    "numeric": "cpp",
+    "optional": "cpp",
+    "random": "cpp",
+    "ratio": "cpp",
+    "regex": "cpp",
+    "string_view": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "utility": "cpp",
+    "fstream": "cpp",
+    "initializer_list": "cpp",
+    "iosfwd": "cpp",
+    "istream": "cpp",
+    "limits": "cpp",
+    "mutex": "cpp",
+    "new": "cpp",
+    "numbers": "cpp",
+    "ostream": "cpp",
+    "semaphore": "cpp",
+    "sstream": "cpp",
+    "stdexcept": "cpp",
+    "stop_token": "cpp",
+    "streambuf": "cpp",
+    "thread": "cpp",
+    "cinttypes": "cpp"
+  },
+  "explorer.fileNesting.patterns": {
+    "*.cjs": "$(capture).cjs.map",
+    "*.js": "$(capture).*",
+    "*.mjs": "$(capture).mjs.map, $(capture).*.ts",
+    "*.ts": "$(capture).ts, $(capture).*.ts, $(capture).*.mjs, $(capture).md, $(capture).cc, $(capture).*.md",
+    "*.vue": "$(capture).*.ts, $(capture).*.js, $(capture).*.vue, $(capture).stories.*, $(capture).mdx",
+    ".env": "*.env, .env-*, .env.*",
+    ".gitignore": ".gitignore, .dockerignore, .git-blame-ignore-revs, .eslintignore, .eslintcache",
+    "README.MD": "authors, *.md, codeowners, LICENCE",
+    "README.md": "authors, *.md, codeowners, LICENCE",
+    "docker-compose.yaml": "Dockerfile, Dockerfile.*, docker-compose.*.yml, docker-compose.*.yaml",
+    "docker-compose.yml": "Dockerfile, Dockerfile.*, docker-compose.*.yml",
+    "package.json": "pnpm*, *.mjs, *.cjs, *.js, *.workspace.ts, *.config.ts, *.json, .npmrc, forcePnpm.js"
+  }
 }
