--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "happy-dom": "16.0.1",
     "husky": "9.1.7",
     "memfs": "4.15.1",
+    "nan": "2.22.0",
+    "node-addon-api": "8.3.0",
+    "node-gyp": "11.0.0",
     "tsx": "4.19.2",
     "typescript": "5.7.2",
     "vitest": "2.1.8"
