feat(functions): add event emitter implementation
This commit introduces a new `createEmitter` utility that provides a type-safe event emitter implementation. The emitter allows for dispatching events and registering listeners with proper TypeScript typing support. The implementation includes methods for adding one-time and persistent event listeners, as well as utilities for removing listeners and clearing all registered handlers.

The emitter is built on top of the native `EventTarget` API but provides a more ergonomic interface with proper type inference. It also implements the `Symbol.dispose` interface for proper cleanup in disposable contexts.

--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -41,6 +41,11 @@
       "types": "./dist/createCounter.d.ts",
       "import": "./dist/createCounter.js"
     },
+    "./createEmitter": {
+      "require": "./dist/createEmitter.cjs",
+      "types": "./dist/createEmitter.d.ts",
+      "import": "./dist/createEmitter.js"
+    },
     "./createFsm": {
       "require": "./dist/createFsm.cjs",
       "types": "./dist/createFsm.d.ts",
