feat(collection): add `castObjectToArray` function
Implemented a new utility function `castObjectToArray` that converts an object with numeric keys into a dense array. The function handles various edge cases such as sparse objects, missing keys, and non-sequential numeric keys. It provides a robust way to transform objects with numeric keys into arrays while preserving the original data structure and handling null or undefined inputs gracefully.

The implementation includes comprehensive type support and ensures that the resulting array maintains the type of the original object's values. The function is flexible and can handle objects with different value types, including strings, numbers, and mixed types.

--- a/packages/collection/package.json
+++ b/packages/collection/package.json
@@ -21,6 +21,11 @@
       "types": "./dist/alias.d.ts",
       "import": "./dist/alias.js"
     },
+    "./castObjectToArray": {
+      "require": "./dist/castObjectToArray.cjs",
+      "types": "./dist/castObjectToArray.d.ts",
+      "import": "./dist/castObjectToArray.js"
+    },
     "./chunk": {
       "require": "./dist/chunk.cjs",
       "types": "./dist/chunk.d.ts",
