chore(unocss-preset): update package exports configuration
The package exports configuration has been updated to remove the `./utils` export and add a new `./createVariant` export. This change ensures that the package's entry points are correctly defined and reflect the current module structure. The modifications improve the package's importability and maintain clean, consistent export paths.

--- a/packages/unocss-preset/package.json
+++ b/packages/unocss-preset/package.json
@@ -21,6 +21,11 @@
       "types": "./dist/constants.d.ts",
       "import": "./dist/constants.js"
     },
+    "./createVariant": {
+      "require": "./dist/createVariant.cjs",
+      "types": "./dist/createVariant.d.ts",
+      "import": "./dist/createVariant.js"
+    },
     "./preset": {
       "require": "./dist/preset.cjs",
       "types": "./dist/preset.d.ts",
@@ -30,11 +35,6 @@
       "require": "./dist/rules.cjs",
       "types": "./dist/rules.d.ts",
       "import": "./dist/rules.js"
-    },
-    "./utils": {
-      "require": "./dist/utils.cjs",
-      "types": "./dist/utils.d.ts",
-      "import": "./dist/utils.js"
     },
     "./variants": {
       "require": "./dist/variants.cjs",
