chore: lint fixes across multiple packages
This commit addresses various lint-related improvements across multiple packages. The changes include adding detailed documentation comments, improving type definitions, and making minor syntax adjustments to enhance code readability and maintainability. No functional changes were introduced, focusing solely on code style and documentation consistency.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "dev": "tsx ./packages/scripts/cli.uncli.ts build --watch true",
     "build": "tsx ./packages/scripts/cli.uncli.ts build --generateIndexes true",
-    "lint": "DEBUG=eslint:eslint eslint --cache",
+    "lint": "DEBUG=eslint:eslint eslint --ignore-pattern examples",
     "lint:ci": "eslint --cache --ignore-pattern examples",
     "lint:fix": "DEBUG=eslint:eslint eslint --fix --cache",
     "test": "vitest --watch",
