feat(math): add comprehensive random number generation package
The `@unshared/math` package now includes a robust and flexible random number generation module. This implementation provides a wide range of statistical distributions with seeded pseudo-random number generation, enabling reproducible random sampling across various use cases. The module supports multiple distribution types including uniform, gaussian, exponential, gamma, beta, and many others, with configurable parameters and consistent seeding mechanism.

--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -81,6 +81,11 @@
       "types": "./dist/percentile.d.ts",
       "import": "./dist/percentile.js"
     },
+    "./random": {
+      "require": "./dist/random.cjs",
+      "types": "./dist/random.d.ts",
+      "import": "./dist/random.js"
+    },
     "./range": {
       "require": "./dist/range.cjs",
       "types": "./dist/range.d.ts",
