--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "url": "git+ssh://git@github.com/shorwood/unshared.git"
   },
   "engines": {
-    "node": ">=20.0.0",
-    "pnpm": ">=9.0.0"
+    "node": ">=22.0.0",
+    "pnpm": ">=10.0.0"
   },
-  "packageManager": "pnpm@9.12.3",
+  "packageManager": "pnpm@10.14.0",
   "pnpm": {
     "peerDependencyRules": {
       "allowAny": [
@@ -24,7 +24,11 @@
         "@typescript-eslint/parser",
         "zod"
       ]
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "esbuild"
+    ]
   },
   "scripts": {
     "dev": "tsx ./packages/scripts/cli.uncli.ts build --watch true",
