chore(scripts): updated commit command to use GitHub API token and OpenAI compatible model
The commit command was updated to use the GitHub API token instead of the Anthropic API key. This change allows the command to use the GitHub API for generating commit messages. Additionally, the model ID was changed to use an OpenAI compatible model. The error message was also updated to reflect the change in API key. The package.json file was updated to reflect the change in dependencies.

--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -96,7 +96,7 @@
     "LICENSE.md"
   ],
   "dependencies": {
-    "@ai-sdk/anthropic": "2.0.5",
+    "@ai-sdk/openai-compatible": "1.0.18",
     "@unshared/collection": "workspace:*",
     "@unshared/fs": "workspace:*",
     "@unshared/process": "workspace:*",
