chore: added new packages for math and string utilities
The `math` and `string` packages have been added to the monorepo. The `math` package now includes the `cosineSimilarity` function, and the `string` package includes the `distanceDiceCoefficient` function. Both packages have been configured with their respective `package.json` files, including dependencies and export maps. The `index.ts` files for both packages have been updated to export the new functions.

--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -31,6 +31,11 @@
       "types": "./dist/clamp.d.ts",
       "import": "./dist/clamp.js"
     },
+    "./cosineSimilarity": {
+      "require": "./dist/cosineSimilarity.cjs",
+      "types": "./dist/cosineSimilarity.d.ts",
+      "import": "./dist/cosineSimilarity.js"
+    },
     "./divide": {
       "require": "./dist/divide.cjs",
       "types": "./dist/divide.d.ts",
