chore: update package.json files
The root `package.json` file was updated to remove the `DEBUG` environment variable from the `lint` and `lint:fix` scripts. This change ensures that the linting process runs without unnecessary debug information, which can clutter the output and slow down the linting process.

Additionally, the `package.json` file for the `fs` package was updated to include `memfs` as a peer dependency. This change ensures that `memfs` is correctly managed as a peer dependency, which is important for maintaining compatibility and avoiding conflicts with other packages that may also depend on `memfs`. This update helps to improve the overall stability and maintainability of the `fs` package.

--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   "scripts": {
     "dev": "tsx ./packages/scripts/cli.uncli.ts build --watch true",
     "build": "NODE_OPTIONS=--max-old-space-size=8192 tsx ./packages/scripts/cli.uncli.ts build --generateIndexes true",
-    "lint": "DEBUG=eslint:eslint eslint --ignore-pattern examples --concurrency auto",
+    "lint": "eslint --ignore-pattern examples --concurrency auto",
     "lint:ci": "eslint --cache --ignore-pattern examples",
-    "lint:fix": "DEBUG=eslint:eslint eslint --fix --cache",
+    "lint:fix": "eslint --fix --cache",
     "test": "vitest --watch",
     "test:ci": "vitest --typecheck --run",
     "test:ui": "vitest --ui",
