chore: add `test:run` script to root `package.json`
Added a new script `test:run` to the root `package.json` file. This script allows running the test suite without the watch mode, providing a straightforward way to execute tests once and exit. This addition enhances the flexibility of the testing workflow, making it easier to run tests in different environments and scenarios.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lint:ci": "eslint --cache --ignore-pattern examples",
     "lint:fix": "eslint --fix --cache",
     "test": "vitest --watch",
+    "test:run": "vitest --run",
     "test:ci": "vitest --typecheck --run",
     "test:ui": "vitest --ui",
     "test:types": "vitest --typecheck",
