feat(string): implement `gotmpl`, a Go template rendering function
Added a Renderer class for rendering Go templates with context, including variable scope management, template collection, and rendering logic. Introduced GoTmpl types for AST nodes and values, along with utility functions for converting JavaScript values to GoTmpl values and vice versa. Added tests for value conversion and truthiness evaluation, and updated package.json to include the new gotmpl module.

--- a/packages/string/package.json
+++ b/packages/string/package.json
@@ -71,6 +71,11 @@
       "types": "./dist/escapeRegexp.d.ts",
       "import": "./dist/escapeRegexp.js"
     },
+    "./gotmpl": {
+      "require": "./dist/gotmpl.cjs",
+      "types": "./dist/gotmpl.d.ts",
+      "import": "./dist/gotmpl.js"
+    },
     "./isDigit": {
       "require": "./dist/isDigit.cjs",
       "types": "./dist/isDigit.d.ts",
