chore(examples): add new theme components and utilities
This commit introduces several new components and utilities to improve the theme functionality within the Nuxt examples. A collection of button variants, input components, and context menus have been created to enhance the user interface. Additionally, the use of CSS variables has been implemented for better style management across various components. The modifications facilitate dynamic theming capabilities, allowing for a responsive and adaptive design. This update also includes comprehensive CSS styling to ensure visual consistency and improved user experience throughout the application.

--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --host",
     "build": "nuxt build",
     "generate": "nuxi generate",
     "preview": "nuxt preview"
