--- a/package.json
+++ b/package.json
@@ -11,24 +11,20 @@
     "url": "git+ssh://git@github.com/shorwood/unshared.git"
   },
   "engines": {
-    "node": ">=22.0.0",
+    "node": ">=24.0.0",
     "pnpm": ">=10.0.0"
   },
-  "packageManager": "pnpm@10.18.1",
+  "packageManager": "pnpm@10.20.0",
   "pnpm": {
-    "peerDependencyRules": {
-      "allowAny": [
-        "eslint",
-        "typescript",
-        "meow",
-        "@typescript-eslint/parser",
-        "zod"
-      ]
-    },
     "onlyBuiltDependencies": [
       "@parcel/watcher",
       "esbuild"
-    ]
+    ],
+    "overrides": {
+      "tar@=7.5.1": ">=7.5.2",
+      "js-yaml@>=4.0.0 <4.1.1": ">=4.1.1",
+      "glob@>=10.2.0 <10.5.0": ">=10.5.0"
+    }
   },
   "scripts": {
     "dev": "tsx ./packages/scripts/cli.uncli.ts build --watch true",
@@ -49,18 +45,18 @@
   },
   "devDependencies": {
     "@commitlint/config-pnpm-scopes": "20.1.0",
-    "@types/node": "24.9.1",
+    "@types/node": "24.10.1",
     "@unshared/eslint-config": "workspace:*",
-    "@vitest/coverage-v8": "3.2.4",
-    "@vitest/ui": "3.2.4",
-    "@vitest/utils": "3.2.4",
+    "@vitest/coverage-v8": "4.0.13",
+    "@vitest/ui": "4.0.13",
+    "@vitest/utils": "4.0.13",
     "commitlint": "20.1.0",
-    "eslint": "9.38.0",
-    "happy-dom": "20.0.8",
+    "eslint": "9.39.1",
+    "happy-dom": "20.0.10",
     "husky": "9.1.7",
-    "memfs": "4.49.0",
+    "memfs": "4.51.0",
     "tsx": "4.20.6",
     "typescript": "5.9.3",
-    "vitest": "3.2.4"
+    "vitest": "4.0.13"
   }
 }
