chore: resolve vitest configuration issues
This commit addresses various issues within the `vitest` configuration and related package files. The Node.js engine requirement has been reverted to allow compatibility with earlier versions, ensuring a broader support for development environments. In addition, the testing commands have been standardized for clarity and consistency. The peer dependency for `memfs` in the `fs` package has been removed to streamline the dependency management. Also, unnecessary pool configurations were eliminated to simplify the setup while maintaining the desired performance. These changes collectively enhance the maintainability and usability of the testing framework across the project.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+ssh://git@github.com/shorwood/unshared.git"
   },
   "engines": {
-    "node": ">=24.0.0",
+    "node": ">=22.0.0",
     "pnpm": ">=10.0.0"
   },
   "packageManager": "pnpm@10.20.0",
@@ -33,8 +33,8 @@
     "lint:ci": "eslint --cache --ignore-pattern examples",
     "lint:fix": "eslint --fix --cache",
     "test": "vitest --watch",
-    "test:run": "vitest --run",
-    "test:ci": "vitest --typecheck --run",
+    "test:run": "vitest run",
+    "test:ci": "vitest run --typecheck",
     "test:ui": "vitest --ui",
     "test:types": "vitest --typecheck",
     "test:coverage": "vitest --coverage",
