feat(unocss-preset): add theme handling and related utilities
This commit enhances the unocss preset by introducing a robust theming system with new rules for background, border, ring, and text color utilities. The `createRuleTheme` and accompanying methods facilitate the management of CSS variables based on theme configurations. Additionally, various tests have been implemented to ensure the expected functionality of the new theme-related rules, providing better color handling and improved developer experience. The overall design also emphasizes type safety and maintainability, laying groundwork for further theme extensions in the future.

--- a/packages/unocss-preset/package.json
+++ b/packages/unocss-preset/package.json
@@ -58,6 +58,7 @@
   },
   "dependencies": {
     "@unshared/collection": "workspace:*",
+    "@unshared/color": "workspace:*",
     "@unshared/string": "workspace:*",
     "@unshared/types": "workspace:*"
   },
