feat(math): add  function and corresponding tests
this change introduces a new linear interpolation function, lerp, which allows for smooth transitions between two numbers based on a given factor.

--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -56,6 +56,11 @@
       "types": "./dist/floor.d.ts",
       "import": "./dist/floor.js"
     },
+    "./lerp": {
+      "require": "./dist/lerp.cjs",
+      "types": "./dist/lerp.d.ts",
+      "import": "./dist/lerp.js"
+    },
     "./mean": {
       "require": "./dist/mean.cjs",
       "types": "./dist/mean.d.ts",
