feat(decorators): add Dirty state tracking functionality
This commit introduces a new Dirty class along with the DirtyProperty and DirtyTrigger decorators to facilitate automatic tracking of changes in class instances. The Dirty class maintains an internal state to determine if properties or methods have been modified, allowing for selective dirty checking and reset based on tags. This enhancement aims to simplify state management in applications by providing a clear mechanism for tracking changes, which can be particularly useful in forms and other interactive components. Additionally, comprehensive tests have been added to ensure the reliability of this new functionality.

--- a/packages/decorators/package.json
+++ b/packages/decorators/package.json
@@ -21,6 +21,11 @@
       "types": "./dist/Debounce.d.ts",
       "import": "./dist/Debounce.js"
     },
+    "./Dirty": {
+      "require": "./dist/Dirty.cjs",
+      "types": "./dist/Dirty.d.ts",
+      "import": "./dist/Dirty.js"
+    },
     "./Memoize": {
       "require": "./dist/Memoize.cjs",
       "types": "./dist/Memoize.d.ts",
@@ -48,6 +53,7 @@
     "LICENSE.md"
   ],
   "dependencies": {
+    "@unshared/collection": "workspace:*",
     "@unshared/functions": "workspace:*",
     "@unshared/types": "workspace:*"
   }
