--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "overrides": {
       "tar@=7.5.1": ">=7.5.2",
       "js-yaml@>=4.0.0 <4.1.1": ">=4.1.1",
-      "glob@>=10.2.0 <10.5.0": ">=10.5.0"
+      "glob@>=10.2.0 <10.5.0": ">=10.5.0",
+      "node-forge@<1.3.2": ">=1.3.2"
     }
   },
   "scripts": {
@@ -47,16 +48,16 @@
     "@commitlint/config-pnpm-scopes": "20.1.0",
     "@types/node": "24.10.1",
     "@unshared/eslint-config": "workspace:*",
-    "@vitest/coverage-v8": "4.0.13",
-    "@vitest/ui": "4.0.13",
-    "@vitest/utils": "4.0.13",
-    "commitlint": "20.1.0",
-    "eslint": "9.39.1",
-    "happy-dom": "20.0.10",
+    "@vitest/coverage-v8": "4.0.16",
+    "@vitest/ui": "4.0.16",
+    "@vitest/utils": "4.0.16",
+    "commitlint": "20.2.0",
+    "eslint": "9.39.2",
+    "happy-dom": "20.0.11",
     "husky": "9.1.7",
-    "memfs": "4.51.0",
-    "tsx": "4.20.6",
+    "memfs": "4.51.1",
+    "tsx": "4.21.0",
     "typescript": "5.9.3",
-    "vitest": "4.0.13"
+    "vitest": "4.0.16"
   }
 }
