feat(functions): implement Entity-Component-System (ECS) utilities
- Added EcsWorld class to manage entities, components, and systems.
- Introduced EcsComponent, EcsResource, EcsSystem, and EcsPlugin base classes.
- Implemented methods for registering components, adding/removing systems, and querying entities.
- Added support for plugins to encapsulate related systems and resources.
- Updated index and package.json to export and include ECS functionality.

--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -76,6 +76,11 @@
       "types": "./dist/debounce.d.ts",
       "import": "./dist/debounce.js"
     },
+    "./ecs": {
+      "require": "./dist/ecs.cjs",
+      "types": "./dist/ecs.d.ts",
+      "import": "./dist/ecs.js"
+    },
     "./flow": {
       "require": "./dist/flow.cjs",
       "types": "./dist/flow.d.ts",
